[package]
name = "learn-actix-jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
argon2 = "0.5.3"
chrono = "0.4.40"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
log = "0.4.27"
mongodb = "3.2.3"
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
uuid = {version="1.16.0", features=["v4"]}
